# Seg_longtail

./: .gitignore  README.md  pyproject.toml
configs/: stage1_pretrained_epoch10.yaml  stage2_balanced.yaml  stage3_rare_recall.yaml  teacher_500.yaml
scripts/: build_balanced_train_list.py  build_training_dataset.py  download_models.py  run_teacher_500.ps1  select_checkpoint.py  train_pipeline.py  train_yolo.py
src/longtail_prelabel/: __init__.py  cli.py  config.py  core.py  models.py  nuimages.py  pipeline.py  taxonomy.py  video.py
