[project]
name = "seg-longtail"
version = "0.2.0"
description = "Grounding DINO + Qwen + SAM2 teacher pipeline and YOLO long-tail segmentation training"
requires-python = ">=3.11,<3.12"
dependencies = [
  "accelerate==1.12.0",
  "huggingface-hub==0.36.2",
  "numpy>=2.0,<3",
  "opencv-python-headless>=4.10,<5",
  "pillow>=11,<12",
  "pycocotools>=2.0.8,<3",
  "pyyaml==6.0.3",
  "qwen-vl-utils>=0.0.11,<1",
  "safetensors>=0.5,<1",
  "torch==2.11.0+cu128",
  "torchvision==0.26.0+cu128",
  "tqdm>=4.66,<5",
  "transformers>=4.57,<5",
  "ultralytics==8.4.101",
  "wandb==0.28.1",
]

[project.scripts]
seg-longtail = "longtail_prelabel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/longtail_prelabel"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = ["ruff>=0.11,<1"]

[tool.ruff]
line-length = 100
